--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -6,23 +6,10 @@ collections_config:
     disable_add_folder: true
     output: true
     path: pages
-    _enabled_editors:
-      - visual
-  news:
-    path: news
-    icon: article
-    disable_add_folder: true
-    output: true
     schemas:
       default:
-        path: site/schemas/news.md
-    preview:
-      metadata: 
-        - icon: newspaper
-          text: 
-            - key: tags
+        path: site/schemas/page.md
     _enabled_editors:
-      - content
       - visual
   data: 
     output: true
@@ -67,9 +54,6 @@ collection_groups:
   - heading: Pages
     collections:
       - pages
-  - heading: Blogging
-    collections:
-      - blog
   - heading: Site Settings
     collections:
       - data
